# mczlabs.perfin

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cli.py  docker-compose.yml  flush.py  handler.py  install_helpers.sh  perfin_cli.py  perfincli  pyproject.toml  query.py  requirements-cli.py  requirements-loose.txt  requirements-test.txt  requirements.txt  serverless.yml  tox.ini
.circleci/: config.yml
.config/: accounts.json
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
cli/: prompts.py
config/: accounts.json  base.json  db.json  dev.json  local.json  prod.json
examples/: upload_example.py
lib/file_matching/: analyzer.py  base.py  config.py  matching.py  policy.py
perfin/: README.md  __init__.py  accounts.py  cli.py  csv.py  doc.py  error.py  es.py  exceptions.py  file_munging.py  handler.py  models.py  munging.py  package-lock.json  package.json  parsing.py  paths.py  requirements-test.txt  s3.py  settings.py  transactions.py  types.py  util.py
perfin/lib/: models.py
perfin/settings/: base.py
terraform/: dev.tfvars  main.tf  variables.tf
tests/: conftest.py  factory_fixtures.py  fixtures.py  test_accounts.py  test_analyzer.py  test_cli.py  test_csv.py  test_es.py  test_file_munging.py  test_files.py  test_integration.py  test_mappings.py  test_matching.py  test_models.py  test_munging.py  test_parsing.py  test_paths.py  test_row.py  test_s3.py  test_transactions.py  test_util.py  util.py
util/: classes.py  config.py  csv_functions.py  es.py  exceptions.py  perfin.py  process_functions.py  support.py  test_functions.py
(+45 files in other folders)
