[tool.poetry]
name = "mczlabs.perfin"
version = "0.0.1"
description = "Configuration for mczlabs packages"
authors = ["Mike Zakany <mzakany@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
elasticsearch-dsl = "^7.4.0"
loguru = "^0.6.0"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.43"
boto3 = "^1.26.3"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
flake8-bugbear = "^21.11.29"
isort = "^5.10.1"
pre-commit = "2.0.1"
pyflakes = "^2.4.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-flakes = "^4.0.4"
pytest-rerunfailures = "^10.2"
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"
twine = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.venv
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
